Saving rails app again ...

--- a/postit-template/app/views/categories/show.html.erb
+++ b/postit-template/app/views/categories/show.html.erb
@@ -2,9 +2,11 @@
 
 <%= render 'shared/content_title', title: "#{all_posts} &raquo; Showing Category: #{@category.name}".html_safe %>
 
-<%= @category.posts.each do |post| %>
+<% @category.posts.each do |post| %>
   <%= render 'posts/post', post: post %>
 <% end %>
+
+
 
 
 
