--- a/postit-template/app/views/posts/show.html.erb
+++ b/postit-template/app/views/posts/show.html.erb
@@ -17,20 +17,25 @@
 
 <% if logged_in? %>
 <%= form_for [@post, @comment] do |f| %>
-  <div class="well">
+  <%= render 'shared/errors', obj: @comment %>
     <div class="control-group">
     	<%= f.label :body, "Leave a Comment" %>
     	<%= f.text_area :body, rows: 3 %>
     </div>
       <%= f.submit "Create Comment", class: "btn btn-primary" %>
-  </div>
   <% end %>
 <% end %>
 
   <% @post.comments.each do |comment| %>
-    <%= comment.body %>
-    <span class="quiet"> by <%=comment.user.username%> at <%=comment.created_at%>.</span>
+    <%= render 'comments/comment', comment: comment %>
   <% end %>
+
+
+
+
+
+
+
 
   
 
