--- a/postit-template/app/views/users/show.html.erb
+++ b/postit-template/app/views/users/show.html.erb
@@ -20,9 +20,10 @@
 
 <% if params[:tab].nil? %>
   <% @user.posts.each do |post| %>
-    <%= render 'posts.post', post: post %>
+    <%= render 'posts/post', post: post %>
   <% end %>
   <elsif params[:tab] == 'comments' %>
   <% @user.comments.each do |comment| %>	
+    <%= render 'comments/comment', comment: comment, show_post: true %>
 <% end %>
 </ul>
