--- a/postit-template/app/views/layouts/_navigation.html.erb
+++ b/postit-template/app/views/layouts/_navigation.html.erb
@@ -1,79 +1,66 @@
-<ul>
-  <div>
-    <%= link_to "Postit!", root_path, :class => 'brand' %>
-  </div>
- 
-<% if !logged_in? %>
+<ul class="nav">
   <li>
-    <%= link_to 'Register', register_path, :class => 'brand' %>
+    <%= link_to "Postit!", root_path, :class => 'brand' %>
   </li>
-<% end %>
-
- <% if logged_in? %>
-  <div class="nav_item"><%= link_to 'New Post', new_post_path, class: "btn btn-success btn-small"%>
-  </div>
-  <div class="btn-group nav_item">
-	     <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
-	       Categories <span class='caret'</span>
-       <% end %>
-  </div>
-<% end %>
-	
-	<ul class='dropdown-menu'>
-		<% Category.all.each do |category| %>
-		  <li>
-		  	<%= link_to category.name, category_path(category) %>
-		  </li>
-		<% end %>
-		<li class='divider'></li>
-  
-  <% if logged_in? %>
-		<li>
-			<%= link_to(new_category_path) do %>
-			  <i class='icon-plus'></i>
-			  New Category
-		</li>
-    <% end %>
-    <% end %>
-	</ul>
-
-<% if logged_in? %>
+</ul>
 <div class='btn-group nav_item'>
-    <%= link_to('', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown') do %>
-    <%= current_user.username %>
-    <span class="caret"></span>
+  <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
+    Categories <span class='caret'></span>
   <% end %>
   <ul class='dropdown-menu'>
-    <li>
-      <%= link_to edit_user_path(current_user) do %>
-      <i class='icon-pencil'></i>
-      edit profile
-      <% end %>
-    </li>
-    <li>
-     <%= link_to user_path(current_user) do %>
-       <i class="icon-user"></i>
-       view profile
-     <% end %>
-    </li>
-  	<li>
-			<%= link_to 'Logout', logout_path, class: "btn btn small" %>
-	  </li>
-   </ul>
- </div>
+    <% Category.all.each do |category| %>
+      <li>
+        <%= link_to category.name, category_path(category)%>
+
+      </li>
+    <% end %>
+    <% if logged_in? %>
+      <li class='divider'></li>
+      <li>
+        <%= link_to(new_category_path) do %>
+          <i class="icon-plus"></i>
+          New Category
+        <% end %>
+        </li>
+    <% end %>
+  </ul>
+</div>
+<% if logged_in? %>
+  <div class='nav_item'>
+    <%= link_to 'New Post', new_post_path, class: 'btn btn-success btn-small' %>
+  </div>
+  <div class='btn-group nav_item'>
+    <%= link_to('', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown') do %>
+      <%= current_user.username %>
+      <span class='caret'></span>
+    <% end %>
+    <ul class='dropdown-menu'>
+      <li>
+        <%= link_to edit_user_path(current_user) do %>
+          <i class='icon-pencil'></i>
+          edit profile
+        <% end %>
+      </li>
+      <li>
+        <%= link_to user_path(current_user) do %>
+          <i class='icon-user'></i>
+          view profile
+        <% end %>
+      </li>
+      <li>
+        <%= link_to logout_path do %>
+          <i class='icon-circle-arrow-left'></i>
+          logout
+        <% end %>
+      </li>
+    </ul>
+  </div>
+<% else # logged out%>
+  <div class='nav_item'>
+    <%= link_to 'Register', register_path, class: 'btn btn-success btn-small' %>
+  </div>
+  <div class='nav_item'>
+    <%= link_to 'Log in', login_path, class: 'btn btn-small' %>
+  </div>
 <% end %>
-</ul>
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
+ 
