--- a/postit-template/app/views/posts/_post.html.erb
+++ b/postit-template/app/views/posts/_post.html.erb
@@ -16,8 +16,8 @@
   	<p><%= post.description %></p>
   	<hr/>
   	<p>
-  	<span class="quiet"> posted by <%=link_to post.creator.username, user_path(post.creator)%><small> at <%= display_datetime(post.created_at)%> .</small></span>
-  </p>
+  	<span class="quiet"> posted by </span><%=link_to post.creator.username, user_path(post.creator)%><small> at <%= display_datetime(post.created_at)%> .</small>
+    </p>
 
   <br/>
   <small>
